@@ -1,3 +1,8 @@
+2020-02-14  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test29-start-file-process)
+	(tramp-test30-make-process): Improve for MS-Windows.
+
 2020-02-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test31-interrupt-process): Remove :unstable tag.
